# FdF

./: .gitignore  CMakeLists.txt  Makefile  README.md  fdf.h  ft_size_of_arr.c  hooks.c  main.c
includes/: apple.h  fdf.h  keys.h  mat.h
libft/: Makefile  author  free_char_arr.c  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_itoa.c  ft_lst_push_back.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  (+28 more)
minilibx/: mlx.h.gch
src/: count_of_points.c  create_img.c  finish.c  free_int_arr.c  get_height_and_color.c  get_points.c  hooks.c  main.c  mat.c  mat3.c  mat4.c  mat4_op.c  mat4_rts.c  mat4_transform.c  mat4_utils.c  read_from_file.c  start.c  vec.c  vec3.c  vec3_op.c  vec4.c  win.c
tests/: CMakeLists.txt  test_mat.c  test_mat3.c  test_mat_inverse.c
